--- a/index.html
+++ b/index.html
@@ -1,39 +1,298 @@
-<style>
-    .Buy-Now {
-        background-color: green;
-    color: white;
-    cursor:pointer;
-    border:none;
-    border-radius: 8px;
-    height: 40px;
-        width: 120px;
-    font-size: 16px;
-    font-weight: bold;
-    transition: 0.5s
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rumble Step</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      overflow-x: hidden;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
     }
-
-    .Buy-Now:hover {
-        background: darkgreen;
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background-color: rgba(0,0,0,0.7);
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      z-index: 100;
+      backdrop-filter: blur(10px);
     }
-    .Buy-Now:active {
-        opacity: 0.6;
+    header img {
+      height: 40px;
+      margin-right: 10px;
     }
-    </style>
+    main {
+      display: flex;
+      margin-top: 60px;
+      height: calc(100vh - 60px);
+    }
+    nav {
+      width: 200px;
+      background-color: rgba(0,0,0,0.5);
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      border-right: 1px solid #444;
+      backdrop-filter: blur(5px);
+    }
+    nav button {
+      padding: 10px;
+      border: none;
+      background-color: rgba(255,255,255,0.1);
+      color: #fff;
+      cursor: pointer;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+    nav button:hover {
+      background-color: rgba(255,255,255,0.3);
+    }
+    section {
+      flex: 1;
+      overflow-y: auto;
+      scroll-snap-type: y mandatory;
+      padding: 20px;
+    }
+    .page {
+      height: 100vh;
+      scroll-snap-align: start;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    h1, h2 {
+      margin-top: 0;
+      color: #fff;
+      text-align: center;
+    }
+    p {
+      line-height: 1.6;
+      color: #ddd;
+      max-width: 700px;
+      text-align: center;
+    }
+    .hero-image {
+      width: 80%;
+      max-width: 600px;
+      border-radius: 20px;
+      margin: 20px 0;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.7);
+      transition: transform 0.3s;
+    }
+    .hero-image:hover {
+      transform: scale(1.02);
+    }
+    .products {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
+      justify-content: center;
+    }
+    .product {
+      width: 180px;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+      background-color: rgba(255,255,255,0.05);
+      padding: 10px;
+      border-radius: 15px;
+    }
+    .product img {
+      width: 100%;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .product:hover img {
+      transform: scale(1.05);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.7);
+    }
+    .product p {
+      margin: 10px 0 5px 0;
+      font-weight: 500;
+    }
+    .price {
+      font-weight: 600;
+      color: #ffd700;
+      margin-bottom: 10px;
+    }
+    .buy-btn {
+      padding: 8px 12px;
+      background-color: #ff4c4c;
+      border: none;
+      border-radius: 8px;
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .buy-btn:hover {
+      background-color: #ff1c1c;
+    }
+    @media (max-width: 768px) {
+      main {
+        flex-direction: column;
+      }
+      nav {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        overflow-x: auto;
+        border-right: none;
+        border-bottom: 1px solid #444;
+      }
+      nav button {
+        flex: 1;
+        min-width: 120px;
+      }
+      section {
+        padding: 10px;
+      }
+      .products {
+        justify-content: center;
+      }
+    }
+  </style>
+</head>
+<body>
+<header>
+  <img src="https://cdn-icons-png.flaticon.com/512/2589/2589903.png" alt="Rumble Step Logo">
+  <h1>Rumble Step</h1>
+</header>
+<main>
+  <nav>
+    <button onclick="showPage('home')">Home</button>
+    <button onclick="showPage('school')">School Shoes</button>
+    <button onclick="showPage('running')">Running Shoes</button>
+    <button onclick="showPage('modern')">Modern Shoes</button>
+  </nav>
+  <section>
+    <!-- Home Page -->
+    <div id="home" class="page">
+      <h2>Welcome to Rumble Step</h2>
+      <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff" alt="Hero Shoes" class="hero-image">
+      <p>
+        At Rumble Step, we are passionate about bringing you the latest and highest quality shoes for every occasion. 
+        Whether you're heading to school, hitting the track, or stepping out in style, we have the perfect pair for you. 
+        Our curated selection features a blend of comfort, durability, and modern design that will keep you moving with confidence. 
+        Explore our extensive collection, find your favorite styles, and enjoy a seamless, inspiring shopping experience. 
+        Step into Rumble Step and take your footwear game to the next level!
+      </p>
+    </div>
 
+    <!-- School Shoes -->
+    <div id="school" class="page">
+      <h2>School Shoes</h2>
+      <div class="products">
+        <div class="product">
+          <img src="677fa294902aa825547be6f0-jousen-men-39-s-fashion-sneakers-white.jpg" alt="">
+          <p>White Shoes</p>
+          <div class="price">$49.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="18222-030_DF.jpg" alt="">
+          <p>Black Shoes</p>
+          <div class="price">$49.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="FST_FOBMF-1011_BROWN_0-MOOD-SHOT_1200x1200.webp" alt="">
+          <p>Brown Shoes</p>
+          <div class="price">$54.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="55f550f465d3bb29132829dea168c472.jpg" alt="">
+          <p>Blue Shoes</p>
+          <div class="price">$52.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+      </div>
+    </div>
 
+    <!-- Running Shoes -->
+    <div id="running" class="page">
+      <h2>Running Shoes</h2>
+      <div class="products">
+        <div class="product">
+          <img src="NIKE+AIR+MAX+EXCEE.avif" alt="">
+          <p>Nike Air</p>
+          <div class="price">$89.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="81312021_1.webp" alt="">
+          <p>Adidas Run</p>
+          <div class="price">$85.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="Sepatu-Speedcat-OG-Unisex-Sneakers.avif" alt="">
+          <p>Puma Speed</p>
+          <div class="price">$79.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="nike_nike_men_running_zoom_fly_6_road_racing_shoes_sepatu_lari_pria_-fn8454-104-_full02_rbwtrbin.webp" alt="">
+          <p>Carbon Plate Shoes</p>
+          <div class="price">$82.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+      </div>
+    </div>
 
+    <!-- Modern Shoes -->
+    <div id="modern" class="page">
+      <h2>Modern Shoes</h2>
+      <div class="products">
+        <div class="product">
+          <img src="01-CONVERSE-FFSSBCONA-CON151041C-Black.webp" alt="">
+          <p>Converse</p>
+          <div class="price">$69.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="12070947_12741715_600.webp" alt="">
+          <p>Vans</p>
+          <div class="price">$64.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="AIR+FORCE+1+'07.avif" alt="">
+          <p>Air Force</p>
+          <div class="price">$95.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+        <div class="product">
+          <img src="01-VANS-FFSSBVAS5-VAS000EYEBWW-Black.webp" alt="">
+          <p>Slip On</p>
+          <div class="price">$59.99</div>
+          <button class="buy-btn" onclick="location.href='thankyou.html'">Buy Now</button>
+        </div>
+      </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<button class="Buy-Now"> Buy Now</button>
+  </section>
+</main>
+<script>
+  function showPage(id) {
+    document.getElementById(id).scrollIntoView({behavior: "smooth"});
+  }
+</script>
+</body>
+</html>
